# creator-substrate-node

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.generateAccounts  Dockerfile.tests  README.md  command  docker-compose.yml
erc20/: README.md
git-pipeline/: .gitignore  README.md
git-pipeline/accounts/: public
git-pipeline/accounts/all/: democracy-1  democracy-2  manual-bridge  relayer  root  society-1  society-2  sudo  tech-comm-1  tech-comm-2  validator-1-controller  validator-1-controller-ed  validator-1-controller-sr  validator-1-stash  validator-1-stash-ed  validator-1-stash-sr  validator-2-controller  validator-2-controller-ed  validator-2-controller-sr  validator-2-stash  validator-2-stash-ed  validator-2-stash-sr
git-pipeline/configs/: .env.config
git-pipeline/generate-accounts/: .env  index.ts
git-pipeline/keys/: node_0_audi.json  node_0_aura.json  node_0_gran.json  node_0_imol.json  node_0_stash_gran.json  node_1_audi.json  node_1_aura.json  node_1_gran.json  node_1_imol.json  node_1_stash_gran.json
git-pipeline/scripts/: init.sh  insert-keys.sh  run-publish.sh  run.sh
git-pipeline/spec-data/: custom-spec-raw.json  custom-spec.json  node.key
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
test-utils/client/: Cargo.toml
test-utils/client/src/: lib.rs
utils/: convertAddress.ts  package.json
